feat: settlement and settlement verification
