# internal/settlement/model/attachment.go
@@ -1,0 +1,7 @@
+package model
+
+type Attachment struct {
+	Url      string
+	Desc     string
+	MimeType string
+}
